Update .middle in css/weather-app-style.css

--- a/css/weather-app-style.css
+++ b/css/weather-app-style.css
@@ -55,8 +55,7 @@ body{
 
 .middle{
 	background-color:   #011b4a; /*#3498DB;*/
-	height: auto;
-	position: fixed;
+	position: absolute;
 	top: 50px;
 	bottom: 50px;
 	left: 0;
